; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/smem/extr_smem.c_start_monitor.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/smem/extr_smem.c_start_monitor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@quit_event = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"smem\00", align 1
@VCOS_SUCCESS = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [28 x i8] c"Failed to create quit event\00", align 1
@SIGINT = common dso_local global i32 0, align 4
@control_c = common dso_local global i32 0, align 4
@SIGTERM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @start_monitor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @start_monitor() #0 {
  %1 = alloca i32, align 4
  %2 = call i64 @vcos_event_create(i32* @quit_event, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %3 = load i64, i64* @VCOS_SUCCESS, align 8
  %4 = icmp ne i64 %2, %3
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = call i32 @vcos_log_info(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0))
  store i32 -1, i32* %1, align 4
  br label %14

7:                                                ; preds = %0
  %8 = load i32, i32* @SIGINT, align 4
  %9 = load i32, i32* @control_c, align 4
  %10 = call i32 @signal(i32 %8, i32 %9)
  %11 = load i32, i32* @SIGTERM, align 4
  %12 = load i32, i32* @control_c, align 4
  %13 = call i32 @signal(i32 %11, i32 %12)
  store i32 0, i32* %1, align 4
  br label %14

14:                                               ; preds = %7, %5
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}

declare dso_local i64 @vcos_event_create(i32*, i8*) #1

declare dso_local i32 @vcos_log_info(i8*) #1

declare dso_local i32 @signal(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
